--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "homepage": "https://alexandercalle.github.io/",
   "scripts": {
     "dev": "vite",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.7.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
